--- a/bio/index.html
+++ b/bio/index.html
@@ -11,15 +11,26 @@
   <body>
     <nav>
       <div class="logo-page">
-        <a id="home-link" href="../index.html">  <img id="profile-photo" src="../assets/img/profile-photo-about.png" alt="">Piermario Persico</a>
+        <a id="home-link" href="../index.html"><img id="profile-photo" src="../assets/img/profile-photo-about.png" alt="">Piermario Persico</a>
       </div>
       <div class="page-link">
         <a class="nav-link bio" href="#">Chi Sono</a>
         <a class="nav-link portfolio" href="../portfolio/index.html">Portfolio</a>
         <a class="nav-link contacts" href="../contacts/index.html">Contatti</a>
-
       </div>
     </nav>
+
+    <div class="mobile-nav">
+      <div class="logo-page">
+        <a id="home-link-mobile" href="../index.html">  <img id="profile-photo" src="../assets/img/profile-photo-about.png" alt="">Piermario Persico</a>
+      </div>
+      <div class="page-link">
+        <a class="mobile-link bio" href="../bio/index.html">Chi Sono</a>
+        <a class="mobile-link portfolio" href="../portfolio/index.html">Portfolio</a>
+        <a class="mobile-link contacts" href="../contacts/index.html">Contatti</a>
+      </div>
+    </div>
+
     <main>
 
         <div class="description">
@@ -43,21 +54,35 @@
             <img id="about-photo" src="../assets/img/image-about2.jpg" alt="">
         </div>
 
-        <div class="inform-box">
+
+    <div class="inform-box">
+
+
+        <div class="inform-box hardskills">
             <h1>COSA POSSO FARE PER TE</h1>
             <p>Grazie alle mie conoscenze di:</p>
             <h2>HTML5</h2>
             <h2>CSS3</h2>
             <h2>PHOTOSHOP(le basi)</h2>
-            <p>Posso realizzare la struttura del tuo sito.</p>
-            <p>Poi trovati qualcuno che lo abbellisca o aspetta che  lo studi io.</p>
+            <p> Grazie a queste conoscenze posso realizzare la struttura del tuo sito.</p>
 
         </div>
+            <div class="inform-box softskills">
+              <h1>LE MIE QUALITA'</h1>
+              <p>Alcune delle mie principali qualità sono:</p>
+              <h2>LAVORARE BENE IN GRUPPO</h2>
+              <h2>ESSERE ATTENTO AI DETTAGLI</h2>
+              <h2>ESSERE CREATIVO</h2>
+              <p>Esse mi permettono di essere un buon candidato per il tuo lavoro.</p>
+            </div>
+</div>
+
+
 
 
     </main>
     <footer>
-      <a href="#home-link">Torna all'inizio</a>
+      <a href="../bio/index.html">Torna all'inizio</a>
       <a href="../index.html">Torna alla Home</a>
       <a href="../bio/index.html">Chi Sono</a>
       <a href="../portfolio/index.html">Portfolio</a>
