Correzioni al testo

--- a/bio/index.html
+++ b/bio/index.html
@@ -46,8 +46,8 @@
             <div class="inform-box">
              <h1>IL MIO PERCORSO DI STUDI</h1>
 
-             <p> Dopo gli studi presso il Liceo Scientifico inizia a frequentare la facoltà di Architettura presso l'Università "Federico II" di Napoli.</p>
-             <p>Contemporaneamente studia anche al Conservatorio "San Pietro a Majella" di Napoli diplomandosi in Clarinetto nel 2019 e finendo la specializzazione nel 2021.</p>
+             <p> Dopo gli studi presso il Liceo Scientifico inizio a frequentare la facoltà di Architettura presso l'Università "Federico II" di Napoli.</p>
+             <p>Contemporaneamente studio anche al Conservatorio "San Pietro a Majella" di Napoli diplomandomi in Clarinetto nel 2019 e finendo la specializzazione nel 2021.</p>
              <p class="study-pharagraph"> Ora studio con  <a href="https://www.start2impact.it/" target="_blank"><img id="start2impact-logo" src="../assets/img/start2impact-logo.svg" alt=""></a>
                 per diventare Web Developer, ma in futuro voglio avvicinarmi anche ad altri linguaggi di programmazione.</p>
             </div>
@@ -64,7 +64,7 @@
             <h2>HTML5</h2>
             <h2>CSS3</h2>
             <h2>PHOTOSHOP(le basi)</h2>
-            <p> Grazie a queste conoscenze posso realizzare la struttura del tuo sito.</p>
+            <p> Posso realizzare la struttura del tuo sito.</p>
 
         </div>
             <div class="inform-box softskills">
