--- a/bio/index.html
+++ b/bio/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>La Mia Bio</title>
   </head>
+
   <body>
     <nav>
       <div class="logo-page">
@@ -19,7 +20,7 @@
         <a class="nav-link contacts" href="../contacts/index.html">Contatti</a>
       </div>
     </nav>
-
+    <!-- menu di navigazione da mobile -->
     <div class="mobile-nav">
       <div class="logo-page">
         <a id="home-link-mobile" href="../index.html">  <img id="profile-photo" src="../assets/img/profile-photo-about.png" alt="">Piermario Persico</a>
@@ -44,11 +45,11 @@
 
         <div class="description">
             <div class="inform-box">
-             <h1>IL MIO PERCORSO DI STUDI</h1>
+               <h1>IL MIO PERCORSO DI STUDI</h1>
 
-             <p> Dopo gli studi presso il Liceo Scientifico inizio a frequentare la facoltà di Architettura presso l'Università "Federico II" di Napoli.</p>
-             <p>Contemporaneamente studio anche al Conservatorio "San Pietro a Majella" di Napoli diplomandomi in Clarinetto nel 2019 e finendo la specializzazione nel 2021.</p>
-             <p class="study-pharagraph"> Ora studio con  <a href="https://www.start2impact.it/" target="_blank"><img id="start2impact-logo" src="../assets/img/start2impact-logo.svg" alt=""></a>
+               <p> Dopo gli studi presso il Liceo Scientifico inizio a frequentare la facoltà di Architettura presso l'Università "Federico II" di Napoli.</p>
+               <p>Contemporaneamente studio anche al Conservatorio "San Pietro a Majella" di Napoli diplomandomi in Clarinetto nel 2019 e finendo la specializzazione nel 2021.</p>
+               <p class="study-pharagraph"> Ora studio con  <a href="https://www.start2impact.it/" target="_blank"><img id="start2impact-logo" src="../assets/img/start2impact-logo.svg" alt=""></a>
                 per diventare Web Developer, ma in futuro voglio avvicinarmi anche ad altri linguaggi di programmazione.</p>
             </div>
             <img id="about-photo" src="../assets/img/image-about2.jpg" alt="">
@@ -59,23 +60,23 @@
 
 
         <div class="inform-box hardskills">
-            <h1>COSA POSSO FARE PER TE</h1>
-            <p>Grazie alle mie conoscenze di:</p>
-            <h2>HTML5</h2>
-            <h2>CSS3</h2>
-            <h2>PHOTOSHOP(le basi)</h2>
-            <p> Posso realizzare la struttura del tuo sito.</p>
-
+          <h1>COSA POSSO FARE PER TE</h1>
+          <p>Grazie alle mie conoscenze di:</p>
+          <h2>HTML5</h2>
+          <h2>CSS3</h2>
+          <h2>PHOTOSHOP(le basi)</h2>
+          <p> Posso realizzare la struttura del tuo sito.</p>
         </div>
-            <div class="inform-box softskills">
-              <h1>LE MIE QUALITA'</h1>
-              <p>Alcune delle mie principali qualità sono:</p>
-              <h2>LAVORARE BENE IN GRUPPO</h2>
-              <h2>ESSERE ATTENTO AI DETTAGLI</h2>
-              <h2>ESSERE CREATIVO</h2>
-              <p>Esse mi permettono di essere un buon candidato per il tuo lavoro.</p>
-            </div>
-</div>
+
+        <div class="inform-box softskills">
+          <h1>LE MIE QUALITA'</h1>
+          <p>Alcune delle mie principali qualità sono:</p>
+          <h2>LAVORARE BENE IN GRUPPO</h2>
+          <h2>ESSERE ATTENTO AI DETTAGLI</h2>
+          <h2>ESSERE CREATIVO</h2>
+          <p>Esse mi permettono di essere un buon candidato per il tuo lavoro.</p>
+        </div>
+    </div>
 
 
 
