--- a/bio/index.html
+++ b/bio/index.html
@@ -16,8 +16,8 @@
       </div>
       <div class="page-link">
         <a class="nav-link bio" href="#">Chi Sono</a>
-        <a class="nav-link portfolio" href="../portfolio/index.html">Portfolio</a>
-        <a class="nav-link contacts" href="../contacts/index.html">Contatti</a>
+        <a class="nav-link portfolio" href="../portfolio/">Portfolio</a>
+        <a class="nav-link contacts" href="../contacts/">Contatti</a>
       </div>
     </nav>
     <!-- menu di navigazione da mobile -->
