--- a/bio/index.html
+++ b/bio/index.html
@@ -12,7 +12,7 @@
   <body>
     <nav>
       <div class="logo-page">
-        <a id="home-link" href="../index.html"><img id="profile-photo" src="../assets/img/profile-photo-about.png" alt="">Piermario Persico</a>
+        <a id="home-link" href="../"><img id="profile-photo" src="../assets/img/profile-photo-about.png" alt="">Piermario Persico</a>
       </div>
       <div class="page-link">
         <a class="nav-link bio" href="#">Chi Sono</a>
@@ -23,12 +23,12 @@
     <!-- menu di navigazione da mobile -->
     <div class="mobile-nav">
       <div class="logo-page">
-        <a id="home-link-mobile" href="../index.html">  <img id="profile-photo" src="../assets/img/profile-photo-about.png" alt="">Piermario Persico</a>
+        <a id="home-link-mobile" href="../">  <img id="profile-photo" src="../assets/img/profile-photo-about.png" alt="">Piermario Persico</a>
       </div>
       <div class="page-link">
-        <a class="mobile-link bio" href="../bio/index.html">Chi Sono</a>
-        <a class="mobile-link portfolio" href="../portfolio/index.html">Portfolio</a>
-        <a class="mobile-link contacts" href="../contacts/index.html">Contatti</a>
+        <a class="mobile-link bio" href="../bio/">Chi Sono</a>
+        <a class="mobile-link portfolio" href="../portfolio/">Portfolio</a>
+        <a class="mobile-link contacts" href="../contacts/">Contatti</a>
       </div>
     </div>
 
@@ -83,11 +83,11 @@
 
     </main>
     <footer>
-      <a href="../bio/index.html">Torna all'inizio</a>
-      <a href="../index.html">Torna alla Home</a>
-      <a href="../bio/index.html">Chi Sono</a>
-      <a href="../portfolio/index.html">Portfolio</a>
-      <a href="../contacts/index.html">Contatti</a>
+      <a href="../bio/">Torna all'inizio</a>
+      <a href="../">Torna alla Home</a>
+      <a href="../bio/">Chi Sono</a>
+      <a href="../portfolio/">Portfolio</a>
+      <a href="../contacts/">Contatti</a>
       <p>  &#169; Piermario Persico 2022</p>
     </footer>
 
